--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="Mapa interativo de clientes da Komando GR.">
   <title>Komando GR - Mapa Interativo de Clientes</title>
-  <link rel="icon" href="src/logo_kmdcblue_icon.png" type="image/x-icon" />
+  <link rel="icon" href="src/Mapa.png" type="image/x-icon" />
   <link rel="stylesheet" href="https://unpkg.com/leaflet/dist/leaflet.css" />
   <style>
     body { margin: 0; font-family: sans-serif; }
